<resources>
    <string name="app_name">LedMobile</string>
    <string name="tab_1">GPS destiny</string>
    <string name="tab_2">Accelerations</string>
    <string name="tab_3">Color Picker</string>
    <string name="tab_4">Indentify Call</string>
    <string name="tab_5">Settings</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem.\nPlease select the wanted function from the left-bottom menu.\n※ You can change the function at luanch time from \"Settings\".</string>
    <string name="no_camera_message">Your device doesn\'t have the camera.\nPlease select the wanted function from the left-bottom menu.\n※ You can change the function at luanch time from \"Settings\".</string>
    <string name="close">CLOSE</string>
    <string name="inicio">inicio</string>
    <string name="gps_destiny">GPS destiny</string>
    <string name="accelerations">Accelerations</string>
    <string name="color_picker">Color picker</string>
    <string name="indentify_call">Indentify Call</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAH_C_Y5WFKLBG0K-fsYqwOhD149d2hyeY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <string name="autocomplete_hint"> Search a Place</string>

</resources>
